--- a/TweetsByX/Views/TweetTableViewCell.xib
+++ b/TweetsByX/Views/TweetTableViewCell.xib
@@ -15,33 +15,33 @@
             <rect key="frame" x="0.0" y="0.0" width="542" height="105"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="542" height="104"/>
+                <rect key="frame" x="0.0" y="0.0" width="542" height="105"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eqn-oa-1Cm">
-                        <rect key="frame" x="30" y="15" width="50" height="50"/>
+                        <rect key="frame" x="20" y="15" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="50" id="A4a-Zv-skY"/>
                             <constraint firstAttribute="width" constant="50" id="fWC-b6-NoC"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <integer key="value" value="25"/>
+                                <integer key="value" value="5"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AsO-05-ps0">
-                        <rect key="frame" x="95" y="20" width="432" height="20"/>
+                        <rect key="frame" x="85" y="15" width="437" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="GAm-AG-Il4"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wjC-cv-wty">
-                        <rect key="frame" x="95" y="45" width="432" height="44.5"/>
+                        <rect key="frame" x="85" y="40" width="437" height="49.5"/>
                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -50,10 +50,10 @@
                 <constraints>
                     <constraint firstItem="wjC-cv-wty" firstAttribute="trailing" secondItem="AsO-05-ps0" secondAttribute="trailing" id="4Gc-RD-zKi"/>
                     <constraint firstItem="wjC-cv-wty" firstAttribute="leading" secondItem="AsO-05-ps0" secondAttribute="leading" id="I8m-Mv-CMO"/>
-                    <constraint firstItem="AsO-05-ps0" firstAttribute="top" secondItem="eqn-oa-1Cm" secondAttribute="top" constant="5" id="SxF-co-J9I"/>
+                    <constraint firstItem="AsO-05-ps0" firstAttribute="top" secondItem="eqn-oa-1Cm" secondAttribute="top" id="SxF-co-J9I"/>
                     <constraint firstItem="eqn-oa-1Cm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="Vms-KF-kR3"/>
-                    <constraint firstItem="eqn-oa-1Cm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="ava-f1-2MD"/>
-                    <constraint firstAttribute="trailing" secondItem="AsO-05-ps0" secondAttribute="trailing" constant="15" id="gJK-Rc-vvf"/>
+                    <constraint firstItem="eqn-oa-1Cm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="ava-f1-2MD"/>
+                    <constraint firstAttribute="trailing" secondItem="AsO-05-ps0" secondAttribute="trailing" constant="20" id="gJK-Rc-vvf"/>
                     <constraint firstItem="AsO-05-ps0" firstAttribute="leading" secondItem="eqn-oa-1Cm" secondAttribute="trailing" constant="15" id="sL9-zk-haB"/>
                     <constraint firstItem="wjC-cv-wty" firstAttribute="top" secondItem="AsO-05-ps0" secondAttribute="bottom" constant="5" id="sbi-xr-a9s"/>
                     <constraint firstAttribute="bottom" secondItem="wjC-cv-wty" secondAttribute="bottom" constant="15" id="tnH-BH-MNB"/>
